test/src/e2e_vm_tests/test_programs/should_fail/language/panic_expression/too_many_panicking_calls/stdout.snap
---
source: test/src/snapshot/mod.rs
---
> forc build --path test/src/e2e_vm_tests/test_programs/should_fail/language/panic_expression/too_many_panicking_calls
exit status: 1
output:
    Building test/src/e2e_vm_tests/test_programs/should_fail/language/panic_expression/too_many_panicking_calls
   Compiling library std (test/src/e2e_vm_tests/reduced_std_libs/sway-lib-std-core)
DIFF------------------------------
.program:
   Compiling script too_many_panicking_calls (test/src/e2e_vm_tests/test_programs/should_fail/language/panic_expression/too_many_panicking_calls)
error: Project contains more than 2047 panicking calls
  --> test/src/e2e_vm_tests/test_programs/should_fail/language/panic_expression/too_many_panicking_calls/src/main.sw:41:5
   |
...
41 |     g("This is the 2051st panicking call.");
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ This is the 2051st panicking call occurred during the compilation.
   |
   = help: Sway projects can have up to 2047 panicking calls.
   = help: In practice, this limit should never be reached, even for large Sway programs.
   = help:  
   = help: Consider compiling the project with the `backtrace` build option
   = help: set to `only_always` or `none`.
____

  Aborting due to 1 error.
error: Failed to compile too_many_panicking_calls
